Logic for subnet definitions

--- a/roles/base/template/consul.hcl.j2
+++ b/roles/base/template/consul.hcl.j2
@@ -2,3 +2,6 @@ datacenter = "dc1"
 data_dir = "/opt/consul"
 start_join = {{ node_server_ips }}
 client_addr = "0.0.0.0"
+{% if 'false' in consul_server | default('false') %}
+segments = "{{ subnet_name.content | basename }}"
+{% endif %}
