--- a/roles/base/template/segments.hcl.j2
+++ b/roles/base/template/segments.hcl.j2
@@ -2,9 +2,9 @@
 {% set port = 8302 %}
 {% for segment in network_segments %}
 segments = {
-advertise = {% raw %}"{{GetPrivateIP}}"
+advertise = {% raw %}"{{GetInterfaceIP \"eth0\"}}"
 {% endraw %}
-bind = {% raw %}"{{GetPrivateIP}}"
+bind = {% raw %}"{{GetInterfaceIP \"eth0\"}}"
 {% endraw %}
 name = "{{ segment }}"
 port = {{ port + loop.index }}
