Enabled connect to remove the 500 error from the UI

--- a/roles/base/template/consul.hcl.j2
+++ b/roles/base/template/consul.hcl.j2
@@ -13,3 +13,6 @@ bind_addr = {% raw %}"{{GetInterfaceIP \"eth0\"}}"
 segment = "{{ subnet_name.content | basename }}"
 {% endif %}
 telemetry { prometheus_retention_time = "4s" }
+connect {
+  enabled = true
+}
